--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
 		"html-webpack-harddisk-plugin": "^0.2.0",
 		"html-webpack-plugin": "^3.2.0",
 		"mini-css-extract-plugin": "^0.4.0",
+		"ngrok": "^3.0.1",
 		"optimist": "^0.6.1",
 		"optimize-css-assets-webpack-plugin": "^4.0.2",
 		"postcss-clean": "^1.1.0",
-		"postcss-cleaner": "^1.2.3",
 		"postcss-colormin": "^2.2.2",
 		"postcss-convert-values": "^2.6.1",
 		"postcss-discard-comments": "^2.0.4",
